added skippedAnime
