# src/modules/user/dto/skipList.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsMongoId } from "class-validator"
+
+class SkipListDto {
+  @ApiProperty()
+  @IsMongoId()
+  animeId: string
+}
+
+export { SkipListDto }
